#update
fixed loading of static translation
fixed missing constructor for Marker